Styling + Deck Rendering + Player Events

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 	<h1>Mano a Mano</h1>
 	
-	<ol id="player"></ol>
+	<ol id="player" class="deck"></ol>
 	
-	<ol id="computer"></ol>
+	<ol id="computer" class="deck"></ol>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
