--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 	<h1>Mano a Mano</h1>
 	
+	<button id="start">Começar</button>
+	
 	<ol id="player" class="deck"></ol>
 	
 	<ol id="computer" class="deck"></ol>
