--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<h1>Mano a Mano</h1>
-	
-	<button id="start">Começar</button>
-	
-	<ol id="player" class="deck"></ol>
-	
-	<ol id="computer" class="deck"></ol>
+	<div id="wrapper">
+		<h1>Mano a Mano</h1>
+		
+		<button id="start">Começar</button>
+		
+		<ol id="player" class="deck"></ol>
+		
+		<ol id="computer" class="deck"></ol>
+	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
