--- a/index.html
+++ b/index.html
@@ -10,16 +10,29 @@
 	<div id="wrapper">
 		<h1>Mano a Mano</h1>
 		
-		<button id="start">Começar</button>
+		<!-- <button id="start">Começar</button> -->
 		
 		<ol id="player" class="deck"></ol>
 		
 		<ol id="computer" class="deck"></ol>
+
+		<div id="game-mode-modal" class="modal display-none">
+			<ul class="game-options">
+				<li data-mode="definedRounds">
+					<span  class="modal-option">Partida rápida</span>
+				</li>
+				<li data-mode="complete">
+					<span class="modal-option">Partida completa</span>
+				</li>
+			</ul>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/StartModal.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
 	<script type="text/javascript" src="js/Computer.js"></script>
+	<script type="text/javascript" src="js/GameModeModule.js"></script>
 	<script type="text/javascript" src="js/GameMaster.js"></script>
 </body>
 </html>
