--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
 				</li>
 			</ul>
 		</div>
+		<div id="round-confirm-modal" class="modal display-none">
+			<button class="ok-button">Ok</button>
+		</div>
 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/StartModal.js"></script>
+	<script type="text/javascript" src="js/RoundModal.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
 	<script type="text/javascript" src="js/Computer.js"></script>
 	<script type="text/javascript" src="js/GameModeModule.js"></script>
