adding elements, styles and script to deal with 'presentation screen' and 'game screen'

--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 </head>
 <body>
 	<div id="wrapper">
-		<h1>
-			<div id="logo"></div>
-		</h1>
+		<div class="presentation-wrapper">
+			<h1 >
+				<div id="logo"></div>
+			</h1>
+		</div>
 	<!-- 
 		<h1>Mano a Mano</h1>
 		 -->
 		<!-- <button id="start">Começar</button> -->
 
 		<div class="game-wrapper display-none">
+			<div class="score-container">
+				<div class="score-display score-user"></div>
+				<div class="score-display score-computer"></div>
+			</div>
 			<ol id="player" class="deck"></ol>
-			
 			<ol id="computer" class="deck"></ol>
 		</div>
 		
