--- a/index.html
+++ b/index.html
@@ -2,21 +2,16 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Mano a Mano</title>
 	
+	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 	<div id="wrapper">
 		<div class="presentation-wrapper">
-			<h1 >
-				<div id="logo"></div>
-			</h1>
+			<h1 id="logo">Mano a Mano</h1>
 		</div>
-	<!-- 
-		<h1>Mano a Mano</h1>
-		 -->
-		<!-- <button id="start">Começar</button> -->
 
 		<div class="game-wrapper display-none">
 			<div class="score-container">
