Added a slightly better face for "game option" screen.
TODO: gotta find better icons.

--- a/index.html
+++ b/index.html
@@ -26,24 +26,26 @@
 		<div id="start-modal" class="modal display-none">
 			<ul class="start-options-list">
 				<li class="start-option" data-option="start">
-					<span  class="start-label">Jogar</span>
-					<span  class="start-image start-play">&nbsp;</span>
+					<span class="start-label">Jogar</span>
+					<span class="start-image start-play">&nbsp;</span>
 				</li>
 				<li class="start-option" data-option="instructions">
-					<span  class="start-label">Instruções</span>
-					<span  class="start-image start-instructions">&nbsp;</span>
+					<span class="start-label">Instruções</span>
+					<span class="start-image start-instructions">&nbsp;</span>
 				</li>
 				<li class="start-option" data-option="configurations">
-					<span  class="start-label">Configurações</span>
-					<span  class="start-image start-configurations">&nbsp;</span>
+					<span class="start-label">Configurações</span>
+					<span class="start-image start-configurations">&nbsp;</span>
 				</li>
 			</ul>
 			<ul class="game-options display-none">
-				<li data-mode="definedRounds">
-					<span  class="modal-option">Partida rápida</span>
+				<li class="game-option" data-mode="definedRounds">
+					<span class="option-label">Partida rápida</span>
+					<span class="option-image option-quick">&nbsp;</span>
 				</li>
-				<li data-mode="complete">
-					<span class="modal-option">Partida completa</span>
+				<li class="game-option" data-mode="complete">
+					<span class="option-label">Partida completa</span>
+					<span class="option-image option-full">&nbsp;</span>
 				</li>
 			</ul>
 		</div>
