adding score elements, scripts and styles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 
 		<div class="game-wrapper display-none">
 			<div class="score-container">
-				<div class="score-display score-user"></div>
-				<div class="score-display score-computer"></div>
+				<div class="score-display score-user">
+					<span class="score-number">0</span>
+				</div>
+				<div class="score-display score-computer">
+					<span class="score-number">0</span>
+				</div>
 			</div>
 			<ol id="player" class="deck"></ol>
 			<ol id="computer" class="deck"></ol>
