--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
 					<p><a href="">Vamos pro Mano a Mano?</a></p>
 				</div>
 			</div>
+			<div class="game-configurations display-none">
+				<a href="javascript:;" class="back-to-start-options">Voltar</a>
+				<ul>
+					<li>
+						<span>Música</span>
+						<input type="checkbox" checked="checked" class=" game-config game-music">
+					</li>
+					<li>
+						<span>Efeitos</span>
+						<input type="checkbox" checked="checked" class=" game-config game-effects">
+					</li>
+					<li>
+						<button class="ok-config-button">Ok</button>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div id="round-confirm-modal" class="modal display-none">
 			<button class="ok-button">Ok</button>
@@ -86,7 +102,9 @@
 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/buzz.min.js"></script>
 	<script type="text/javascript" src="js/StartModal.js"></script>
+	<script type="text/javascript" src="js/SoundModule.js"></script>
 	<script type="text/javascript" src="js/RoundModal.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
 	<script type="text/javascript" src="js/Computer.js"></script>
