adding elements and scripts to options component

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 		<div class="presentation-wrapper">
 			<h1 id="logo">Mano a Mano</h1>
 		</div>
-
+		<div class="game-general-options">
+			<div class="general-option-button general-music-button">
+				<span class="button-mask"></span>
+			</div>
+			<div class="general-option-button general-configurations-button"></div>
+		</div>
 		<div class="game-wrapper display-none">
 			<div class="score-container">
 				<div class="score-display score-user">
@@ -27,7 +32,6 @@
 			<ol id="player" class="deck"></ol>
 			<ol id="computer" class="deck"></ol>
 		</div>
-		
 
 		<div id="start-modal" class="modal display-none">
 			<ul class="start-options-list">
@@ -104,6 +108,7 @@
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/buzz.min.js"></script>
 	<script type="text/javascript" src="js/StartModal.js"></script>
+	<script type="text/javascript" src="js/GeneralOptionsComponent.js"></script>
 	<script type="text/javascript" src="js/SoundModule.js"></script>
 	<script type="text/javascript" src="js/RoundModal.js"></script>
 	<script type="text/javascript" src="js/Player.js"></script>
