creating folder to gallery

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -6,7 +6,7 @@
     <title>Mano a Mano</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/gallery-style.css" />
+    <link rel="stylesheet" href="..//css/gallery-style.css" />
 </head>
 
 <body>
