adding method to get share screen after game

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Mano a Mano</title>
 	
+	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css" />
 </head>
