--- a/shareTemplate.html
+++ b/shareTemplate.html
@@ -11,32 +11,26 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div id="share-wrapper">
+		<div id="share-wrapper" class="noob">
 			<div id="share-zh-logo"></div>
 			<div id="share-logo"></div>
 			<div id="punchline">
-				<!-- O que foi isso? Você parecia estar cansado ainda no aquecimento! Tudo bem, não desanime. A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.-->
-				<!--A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha? Siga as instruções do treinador e dedique-se mais nos treinamentos.-->
-				<!--Parabéns, você foi o melhor em campo!-->
+				<span>O que foi isso? Você parecia estar cansado ainda no aquecimento! Tudo bem, não desanime. A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.
+				</span>
 			</div>
 			<div id="share-field-wrapper">
 				<div id="share-field"></div>
 				<div id="share-image"></div>
 				<div id="text-container">
 					<div class="share-title">
-						<!--CRAQUE-->
-						<!--PROMESSA-->
 						PERNA DE PAU
 					</div>
 					<div class="share-subtitle">
-						<!--ACIMA DE 80%-->
-						ACIMA DE 50% e 80%
-						<!--ABAIXO DE 50%-->
+						ABAIXO DE 50%
 					</div>
 					<div class="share-description">
-						<!--Compartilhe seu resultado, aprenda com seus erros e tente novamente. Mostre ao mundo que você pode evoluir até virar um craque do jogo!-->
-						<!-- Compartilhe seu resultado e tente novamente. Afinal, uma promessa logo é esquecida. Um craque é eterno.-->
-						<!--Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia – assim que você compartilhar o resultado com seus amigos. Mas não deixe a fama trapalhar seu desempenho, pois a torcida pode facilmente virar pro outro lado no próximo jogo. Será que você conseguirá se manter no topo?’-->
+						<span>Compartilhe seu resultado, aprenda com seus erros e tente novamente. Mostre ao mundo que você pode evoluir até virar um craque do jogo!
+						</span>
 					</div>
 				</div>
 			</div>
