adding sharing pages, links, styles

--- a/c17.html
+++ b/c17.html
@@ -20,8 +20,14 @@
 		</div>
 	</div>
 	<div id="share-buttons">
-		<div class="share-button facebook-button"></div>
-		<div class="share-button twitter-button"></div>
-		<div class="share-button google-plus-button"></div>
+		<div class="share-button facebook-button">
+			<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+		</div>
+		<div class="share-button twitter-button">
+			<a target="_blank" href="https://twitter.com/intent/tweet?text=Parabéns, você foi o melhor em campo! Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia!&amp;url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+		</div>
+		<div class="share-button google-plus-button">
+			<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+		</div>
 	</div>
 </div>
