--- a/m2.html
+++ b/m2.html
@@ -20,8 +20,14 @@
 		</div>
 	</div>
 	<div id="share-buttons">
-		<div class="share-button facebook-button"></div>
-		<div class="share-button twitter-button"></div>
-		<div class="share-button google-plus-button"></div>
+		<div class="share-button facebook-button">
+			<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+		</div>
+		<div class="share-button twitter-button">
+			<a target="_blank" href="https://twitter.com/intent/tweet?text=A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha?&amp;url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+		</div>
+		<div class="share-button google-plus-button">
+			<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+		</div>
 	</div>
 </div>
