--- a/p1.html
+++ b/p1.html
@@ -2,8 +2,7 @@
 	<div id="share-zh-logo"></div>
 	<div id="share-logo"></div>
 	<div id="punchline">
-		<span>O que foi isso? Você parecia estar cansado ainda no aquecimento! Tudo bem, não desanime. A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.
-		</span>
+		O que foi isso? Você parecia estar cansado ainda no aquecimento! Tudo bem, não desanime. A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.
 	</div>
 	<div id="share-field-wrapper">
 		<div id="share-field"></div>
@@ -16,14 +15,19 @@
 				ABAIXO DE 50%
 			</div>
 			<div class="share-description">
-				<span>Compartilhe seu resultado, aprenda com seus erros e tente novamente. Mostre ao mundo que você pode evoluir até virar um craque do jogo!
-				</span>
+				Compartilhe seu resultado, aprenda com seus erros e tente novamente. Mostre ao mundo que você pode evoluir até virar um craque do jogo!
 			</div>
 		</div>
 	</div>
 	<div id="share-buttons">
-		<div class="share-button facebook-button"></div>
-		<div class="share-button twitter-button"></div>
-		<div class="share-button google-plus-button"></div>
+		<div class="share-button facebook-button">
+			<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/pern.html" class="share-link"></a>
+		</div>
+		<div class="share-button twitter-button">
+			<a target="_blank" href="https://twitter.com/intent/tweet?text=A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.&amp;url=http://dailydevtips.com/cards/pern.html" class="share-link"></a>
+		</div>
+		<div class="share-button google-plus-button">
+			<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/pern.html" class="share-link"></a>
+		</div>
 	</div>
 </div>
