Fix bg gradient, options position, Lobster font, Score labels

--- a/index.html
+++ b/index.html
@@ -17,25 +17,26 @@
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<div class="game-general-options">
-		<div class="general-option-button general-music-button">
-			<span class="button-mask"></span>
-		</div>
-		<div class="general-option-button general-configurations-button"></div>
-	</div>
 	<div id="wrapper">
+		<div class="game-general-options">
+			<div class="general-option-button general-music-button">
+				<span class="button-mask"></span>
+			</div>
+			<div class="general-option-button general-configurations-button"></div>
+		</div>
+	
 		<div class="presentation-wrapper">
 			<h1 id="logo">Mano a Mano</h1>
 		</div>
 		<div class="game-wrapper display-none">
 			<div class="score-container">
 				<div class="score-display score-user">
-					<span class="score-name player-name">JOGADOR</span>
+					<span class="score-name player-name">Jogador</span>
 					<span class="score-number">0</span>
 				</div>
 				<div class="score-display score-computer">
 					<span class="score-number">0</span>
-					<span class="score-name pc-name">COMPUTADOR</span>
+					<span class="score-name pc-name">Computador</span>
 				</div>
 			</div>
 			<ol id="player" class="deck"></ol>
