Adding Game Style Icons

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 			<ul class="game-options display-none">
 				<li class="game-option" data-mode="definedRounds">
 					<span class="option-label">Partida rápida</span>
-					<span class="option-image option-quick">&nbsp;</span>
+					<span class="icon icon-timer">&nbsp;</span>
 				</li>
 				<li class="game-option" data-mode="complete">
 					<span class="option-label">Partida completa</span>
-					<span class="option-image option-full">&nbsp;</span>
+					<span class="icon icon-cup">&nbsp;</span>
 				</li>
 			</ul>
 			<div class="game-instructions display-none">
