adding header and footer on modal tab

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="general-option-button general-configurations-button"></div>
 		</div>
 	
-		<div class="presentation-wrapper">
+		<div class="">
 			<h1 id="logo">Mano a Mano</h1>
 		</div>
 		<div class="game-wrapper display-none">
@@ -69,28 +69,35 @@
 				</li>
 			</ul>
 			<div class="game-instructions display-none">
-				<a href="javascript:;" class="back-to-start-options">Voltar</a>
-				<div class="instructions-resume">
-					<p class="main-title">COMO JOGAR</p>
-					<p>São 32 cartas, representando as seleções que disputam a Copa no Brasil.</p>
-					<p>Você pode escolher entre:</p>
+				<div class="game-instructions-header">
+					INSTRUÇÕES
 				</div>
-				<div class="match-description">
-					<p class="title">Partida Rápida</p>
-					<p>São, no máximo, 5 combinações de cartas. Quem vencer 3 rodadas leva a taça.</p>
+				<div class="game-instructions-body">
+					<div class="instructions-resume">
+						<p class="main-title">COMO JOGAR</p>
+						<p>São 32 cartas, representando as seleções que disputam a Copa no Brasil.</p>
+						<p>Você pode escolher entre:</p>
+					</div>
+					<div class="match-description">
+						<p class="title">Partida Rápida</p>
+						<p>São, no máximo, 5 combinações de cartas. Quem vencer 3 rodadas leva a taça.</p>
+					</div>
+					<div class="match-description">
+						<p class="title">Partida Completa</p>
+						<p class="mb15">​Todas as cartas são utilizadas, e ganha quem tiver o maior número de vitórias nas 16 rodadas.</p>
+					</div>
+					<div class="instructions-end">
+						<p>Cada carta traz informações a respeito de um atleta. Confira <a href="">aqui</a> a lista completa.</p>
+						<p>Aleatoriamente, as cartas são divididas entre o jogador (você) e o computador (seu adversário).</p>
+						<p>Você dá o pontapé inicial. Escolha, clicando entre as informações de sua primeira carta, aquela que você acredita ter um valor que supere o da carta do seu adversário.</p>
+						<p>Se o seu valor for maior, é gol, e você vence a rodada. Se for menor, você perde.</p>
+						<p>No final, ganha a partida quem vencer o maior número de rodadas.</p>
+						<p>Dependendo da sua pontuação, você pode vir a se tornar um craque, ficar marcado como uma eterna promessa ou, pior, ser um tremendo perna de pau.</p>
+						<p><a href="">Vamos pro Mano a Mano?</a></p>
+					</div>
 				</div>
-				<div class="match-description">
-					<p class="title">Partida Completa</p>
-					<p class="mb15">​Todas as cartas são utilizadas, e ganha quem tiver o maior número de vitórias nas 16 rodadas.</p>
-				</div>
-				<div class="instructions-end">
-					<p>Cada carta traz informações a respeito de um atleta. Confira <a href="">aqui</a> a lista completa.</p>
-					<p>Aleatoriamente, as cartas são divididas entre o jogador (você) e o computador (seu adversário).</p>
-					<p>Você dá o pontapé inicial. Escolha, clicando entre as informações de sua primeira carta, aquela que você acredita ter um valor que supere o da carta do seu adversário.</p>
-					<p>Se o seu valor for maior, é gol, e você vence a rodada. Se for menor, você perde.</p>
-					<p>No final, ganha a partida quem vencer o maior número de rodadas.</p>
-					<p>Dependendo da sua pontuação, você pode vir a se tornar um craque, ficar marcado como uma eterna promessa ou, pior, ser um tremendo perna de pau.</p>
-					<p><a href="">Vamos pro Mano a Mano?</a></p>
+				<div class="text-center game-instructions-footer">
+					<a href="javascript:;" class="back-to-start-options">Voltar</a>
 				</div>
 			</div>
 			<div class="game-configurations display-none">
