fixing a lot of things. A LOT OF. really

--- a/crque.html
+++ b/crque.html
@@ -51,6 +51,11 @@
 				</div>
 			</div>
 		</div>
+		<div class="replay-option start-option" data-option="start">
+			<span class="start-label">Jogar novamente</span>
+			<span class="start-image start-play">&nbsp;</span>
+			<a class="replay-link" href="index.html"></a>
+		</div>
 	</div>
 </body>
 </html>
