--- a/pern.html
+++ b/pern.html
@@ -22,7 +22,16 @@
 			<div id="share-zh-logo"></div>
 			<div id="share-logo"></div>
 			<div id="punchline">
-				O que foi isso? Você parecia estar cansado ainda no aquecimento! Tudo bem, não desanime. A vida de jogador profissional não é nada fácil, mas é bom saber que sempre haverá uma nova partida a ser disputada.
+				<span class="w170">O que foi isso? Você parecia</span>
+				<span class="w170">estar cansado ainda no</span>
+				<span>aquecimento! Tudo bem,</span>
+				<span>não desanime. A vida de</span>
+				<span>jogador profissional não</span>
+				<span>é nada fácil, mas é bom</span>
+				<span>saber que sempre</span>
+				<span>haverá uma nova</span>
+				<span>partida a ser</span>
+				<span>disputada.</span>
 			</div>
 			<div id="share-field-wrapper">
 				<div id="share-field"></div>
@@ -31,9 +40,7 @@
 					<div class="share-title">
 						PERNA DE PAU
 					</div>
-					<div class="share-subtitle">
-						ABAIXO DE 50%
-					</div>
+					<div class="share-subtitle">ABAIXO DE 50%</div>
 					<div class="share-description">
 						Compartilhe seu resultado, aprenda com seus erros e tente novamente. Mostre ao mundo que você pode evoluir até virar um craque do jogo!
 					</div>
@@ -50,6 +57,11 @@
 					<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/pern.html" class="share-link"></a>
 				</div>
 			</div>
+		</div>
+		<div class="replay-option start-option" data-option="start">
+			<span class="start-label">Jogar novamente</span>
+			<span class="start-image start-play">&nbsp;</span>
+			<a class="replay-link" href="index.html"></a>
 		</div>
 	</div>
 </body>
