--- a/c17.html
+++ b/c17.html
@@ -1,33 +1,40 @@
-<div id="share-wrapper" class="expert">
-	<div id="share-zh-logo"></div>
-	<div id="share-logo"></div>
-	<div id="punchline">
-		Parabéns, você foi o melhor em campo!
+<div>
+	<div id="share-wrapper" class="expert">
+		<div id="share-zh-logo"></div>
+		<div id="share-logo"></div>
+		<div id="punchline">
+			Parabéns, você foi o melhor em campo!
+		</div>
+		<div id="share-field-wrapper">
+			<div id="share-field"></div>
+			<div id="share-image"></div>
+			<div id="text-container">
+				<div class="share-title">
+					CRAQUE
+				</div>
+				<div class="share-subtitle">
+					ACIMA DE 80%
+				</div>
+				<div class="share-description">
+					Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia – assim que você compartilhar o resultado com seus amigos. Mas não deixe a fama trapalhar seu desempenho, pois a torcida pode facilmente virar pro outro lado no próximo jogo. Será que você conseguirá se manter no topo?
+				</div>
+			</div>
+		</div>
+		<div id="share-buttons">
+			<div class="share-button facebook-button">
+				<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+			</div>
+			<div class="share-button twitter-button">
+				<a target="_blank" href="https://twitter.com/intent/tweet?text=Parabéns, você foi o melhor em campo! Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia!&amp;url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+			</div>
+			<div class="share-button google-plus-button">
+				<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
+			</div>
+		</div>
 	</div>
-	<div id="share-field-wrapper">
-		<div id="share-field"></div>
-		<div id="share-image"></div>
-		<div id="text-container">
-			<div class="share-title">
-				CRAQUE
-			</div>
-			<div class="share-subtitle">
-				ACIMA DE 80%
-			</div>
-			<div class="share-description">
-				Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia – assim que você compartilhar o resultado com seus amigos. Mas não deixe a fama trapalhar seu desempenho, pois a torcida pode facilmente virar pro outro lado no próximo jogo. Será que você conseguirá se manter no topo?
-			</div>
-		</div>
-	</div>
-	<div id="share-buttons">
-		<div class="share-button facebook-button">
-			<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
-		</div>
-		<div class="share-button twitter-button">
-			<a target="_blank" href="https://twitter.com/intent/tweet?text=Parabéns, você foi o melhor em campo! Acabou o sossego: fotos, autógrafos e entrevistas farão parte do seu dia a dia!&amp;url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
-		</div>
-		<div class="share-button google-plus-button">
-			<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/crque.html" class="share-link"></a>
-		</div>
+	<div class="replay-option start-option" data-option="start">
+		<span class="start-label">Jogar novamente</span>
+		<span class="start-image start-play">&nbsp;</span>
+		<a class="replay-link" href="index.html"></a>
 	</div>
 </div>
