--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		</div>
 	
 		<div class="">
-			<h1 id="logo">Mano a Mano</h1>
+			<h1 id="logo">
+				<a class="logo-link" href="">Mano a Mano</a>
+			</h1>
 		</div>
 		<div class="game-wrapper display-none">
 			<div class="score-container">
@@ -70,7 +72,7 @@
 			</ul>
 			<div class="game-instructions display-none">
 				<div class="game-instructions-header">
-					INSTRUÇÕES
+					Instruções
 				</div>
 				<div class="game-instructions-body">
 					<div class="instructions-resume">
@@ -101,25 +103,30 @@
 				</div>
 			</div>
 			<div class="game-configurations display-none">
-				<a href="javascript:;" class="back-to-start-options">Voltar</a>
-				<ul>
-					<li>
-						<span>Música</span>
-						<input type="checkbox" checked="checked" class=" game-config game-music">
-					</li>
-					<li>
-						<span>Efeitos</span>
-						<input type="checkbox" checked="checked" class=" game-config game-effects">
-					</li>
-					<li>
-						<button class="ok-config-button">OK</button>
-					</li>
-				</ul>
+				<div class="game-configurations-header">
+					Configurações
+				</div>
+				<div class="game-configurations-body">
+					<ul class="config-list">
+						<li>
+							<span class="game-config-item game-config-music-label isOn">Música</span>
+							<!-- <input type="checkbox" checked="checked" class=" game-config game-music"> -->
+						</li>
+						<li>
+							<span class="game-config-item game-config-effects-label isOn">Efeitos</span>
+							<!-- <input type="checkbox" checked="checked" class=" game-config game-effects"> -->
+						</li>
+						<li>
+							<!-- <button class="ok-config-button">OK</button> -->
+						</li>
+					</ul>
+				</div>
+				<div class="text-center game-configurations-footer">
+					<a href="javascript:;" class="back-to-start-options">Voltar</a>
+				</div>
 			</div>
 		</div>
-		<div id="round-confirm-modal" class="modal display-none">
-			<button class="ok-button">Ok</button>
-		</div>
+		<div id="round-confirm-modal" class="modal display-none"></div>
 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
