--- a/m2.html
+++ b/m2.html
@@ -1,33 +1,46 @@
-<div id="share-wrapper" class="promise">
-	<div id="share-zh-logo"></div>
-	<div id="share-logo"></div>
-	<div id="punchline">
-		A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha? Siga as instruções do treinador e dedique-se mais nos treinamentos.
+<div>
+	<div id="share-wrapper" class="promise">
+		<div id="share-zh-logo"></div>
+		<div id="share-logo"></div>
+		<div id="punchline">
+			<span class="w170">A torcida estava incenti-</span>
+			<span class="w170">vando e você até que jogou</span>
+			<span class="w170">bem. Mas pode fazer mais</span>
+			<span>do que isso, não acha?</span>
+			<span>Siga as instruções do</span>
+			<span>treinador e dedique-se</span>
+			<span>mais nos treinamentos.</span>
+		</div>
+		<div id="share-field-wrapper">
+			<div id="share-field"></div>
+			<div id="share-image"></div>
+			<div id="text-container">
+				<div class="share-title">
+					PROMESSA
+				</div>
+				<div class="share-subtitle">
+					ENTRE 50% e 80%
+				</div>
+				<div class="share-description">
+					Compartilhe seu resultado e tente novamente. Afinal, uma promessa logo é esquecida. Um craque é eterno.
+				</div>
+			</div>
+		</div>
+		<div id="share-buttons">
+			<div class="share-button facebook-button">
+				<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+			</div>
+			<div class="share-button twitter-button">
+				<a target="_blank" href="https://twitter.com/intent/tweet?text=A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha?&amp;url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+			</div>
+			<div class="share-button google-plus-button">
+				<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
+			</div>
+		</div>
 	</div>
-	<div id="share-field-wrapper">
-		<div id="share-field"></div>
-		<div id="share-image"></div>
-		<div id="text-container">
-			<div class="share-title">
-				PROMESSA
-			</div>
-			<div class="share-subtitle">
-				ENTRE 50% e 80%
-			</div>
-			<div class="share-description">
-				Compartilhe seu resultado e tente novamente. Afinal, uma promessa logo é esquecida. Um craque é eterno.
-			</div>
-		</div>
-	</div>
-	<div id="share-buttons">
-		<div class="share-button facebook-button">
-			<a target="_blank" href="http://www.facebook.com/sharer.php?s=100&amp;p[url]=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
-		</div>
-		<div class="share-button twitter-button">
-			<a target="_blank" href="https://twitter.com/intent/tweet?text=A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha?&amp;url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
-		</div>
-		<div class="share-button google-plus-button">
-			<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
-		</div>
+	<div class="replay-option start-option" data-option="start">
+		<span class="start-label">Jogar novamente</span>
+		<span class="start-image start-play">&nbsp;</span>
+		<a class="replay-link" href="index.html"></a>
 	</div>
 </div>
