--- a/prms.html
+++ b/prms.html
@@ -22,7 +22,13 @@
 			<div id="share-zh-logo"></div>
 			<div id="share-logo"></div>
 			<div id="punchline">
-				A torcida estava incentivando e você até que jogou bem. Mas pode fazer mais do que isso, não acha? Siga as instruções do treinador e dedique-se mais nos treinamentos.
+				<span class="w170">A torcida estava incenti-</span>
+				<span class="w170">vando e você até que jogou</span>
+				<span class="w170">bem. Mas pode fazer mais</span>
+				<span>do que isso, não acha?</span>
+				<span>Siga as instruções do</span>
+				<span>treinador e dedique-se</span>
+				<span>mais nos treinamentos.</span>
 			</div>
 			<div id="share-field-wrapper">
 				<div id="share-field"></div>
@@ -50,6 +56,11 @@
 					<a target="_blank" href="https://plus.google.com/share?url=http://dailydevtips.com/cards/prms.html" class="share-link"></a>
 				</div>
 			</div>
+		</div>
+		<div class="replay-option start-option" data-option="start">
+			<span class="start-label">Jogar novamente</span>
+			<span class="start-image start-play">&nbsp;</span>
+			<a class="replay-link" href="index.html"></a>
 		</div>
 	</div>
 </body>
