adding a red 'x' on music when is muted. Fixing start modal and share screen relation when options button is pressed

--- a/c17.html
+++ b/c17.html
@@ -1,4 +1,4 @@
-<div>
+<div id="share-container">
 	<div id="share-wrapper" class="expert">
 		<div id="share-zh-logo"></div>
 		<div id="share-logo"></div>
