--- a/m2.html
+++ b/m2.html
@@ -1,4 +1,4 @@
-<div>
+<div id="share-container">
 	<div id="share-wrapper" class="promise">
 		<div id="share-zh-logo"></div>
 		<div id="share-logo"></div>
