--- a/p1.html
+++ b/p1.html
@@ -1,4 +1,4 @@
-<div>
+<div id="share-container">
 	<div id="share-wrapper" class="noob">
 		<div id="share-zh-logo"></div>
 		<div id="share-logo"></div>
