--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<meta property="og:image" content="http://www.dailydevtips.com/cards/img/share.png"/>
 	<meta property="og:title" content="Mano a Mano"/>
-	<meta property="og:description" content="Você já é um craque? Jogue e mostre para todo mundo."/>
+	<meta property="og:description" content=""/>
 	<meta property="og:url"   content="http://www.dailydevtips.com/cards/"/>
 	<meta property="og:site_name" content="Mano a Mano"/>
 	<meta property="og:type" content="website"/>
@@ -128,6 +128,30 @@
 		</div>
 		<div id="round-confirm-modal" class="modal display-none"></div>
 	</div>
+
+	<script type="text/javascript">
+		/*
+		if ((new RegExp('\.clicrbs\.com\.br')).test(document.location.host)) {
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-3469445-1']);
+			_gaq.push(['_setDomainName', '.clicrbs.com.br']);
+			_gaq.push(['_setAllowHash', false]);
+			_gaq.push(['_setCustomVar', 1, 'User-Defined', userDefinedValue, 1]);
+			_gaq.push(['_setCustomVar', 4, 'RangeZH', "Range "+map[range], 2]);
+			_gaq.push(['_setLocalGifPath', 'http://www.clicrbs.com.br/refresh/urchin.gif']);
+			_gaq.push(['_setLocalRemoteServerMode']);
+			_gaq.push(['_trackPageview']);
+			_gaq.push(['_trackPageLoadTime']);
+			_gaq.push(['_setAllowLinker', true]);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		}
+		*/
+	</script>
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="js/buzz.min.js"></script>
