adding sources tab to modal

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -13,6 +13,11 @@
     <div id="wrapper">
         <div class="game-wrapper ">
             <h1>Galeria de Jogadores</h1>
+            <div class="replay-option start-option" data-option="start">
+                <span class="start-label">Jogar</span>
+                <span class="start-image start-play">&nbsp;</span>
+                <a class="replay-link" href="../index.html"></a>
+            </div>
             <ul class="gallery-list">
             	<li class="card card-13 neymar flipped" title="Brasil, Grupo A, Neymar, 22 anos, Atacante">
             	    <div class="front">
